force-app/main/default/objects/breg_Entity_List__c/breg_Entity_List__c.object-meta.xml
<CustomObject>
    <description>Aalta BREG-58</description>
    <label>Entity List</label>
    <nameField>
        <displayFormat>EntityList-{00000000}</displayFormat>
        <label>Entity List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entity Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>