force-app/main/default/objects/breg_Entity_List__c/fields/breg_Difference_for_a_week__c.field-meta.xml
<CustomField>
    <fullName>breg_Difference_for_a_week__c</fullName>
    <description>Aalta BREG-1183</description>
    <label>Difference for a week</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>