force-app/main/default/objects/breg_Entity_List__c/fields/breg_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>breg_Email_Address__c</fullName>
    <description>Aalta BREG-58</description>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>