force-app/main/default/objects/breg_Entity_List__c/fields/breg_End_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_End_Date__c</fullName>
    <description>Aalta BREG-58</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>