force-app/main/default/objects/breg_Entity_List__c/fields/breg_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>breg_Entity_Type__c</fullName>
    <description>Aalta BREG-58</description>
    <label>Entity Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Entity_Type</valueSetName>
    </valueSet>
</CustomField>