force-app/main/default/objects/breg_Entity_List__c/fields/breg_Entity_Type_Codes__c.field-meta.xml
<CustomField>
    <fullName>breg_Entity_Type_Codes__c</fullName>
    <label>Entity Type Codes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>breg_Entity_Type_Codes</valueSetName>
    </valueSet>
</CustomField>