force-app/main/default/objects/breg_Entity_List__c/fields/breg_Entity_Types__c.field-meta.xml
<CustomField>
    <fullName>breg_Entity_Types__c</fullName>
    <description>Separated by ;</description>
    <label>Entity Types</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>