force-app/main/default/objects/breg_Entity_List__c/fields/breg_Is_One_Tme__c.field-meta.xml
<CustomField>
    <fullName>breg_Is_One_Tme__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if the Entity List is scheduled for execution on weekly basis</description>
    <label>Is Scheduled</label>
    <type>Checkbox</type>
</CustomField>