force-app/main/default/objects/breg_Entity_List__c/fields/breg_Name_Company__c.field-meta.xml
<CustomField>
    <fullName>breg_Name_Company__c</fullName>
    <description>Aalta BREG-58</description>
    <label>Name/Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>