force-app/main/default/objects/breg_Entity_List__c/fields/breg_Results__c.field-meta.xml
<CustomField>
    <fullName>breg_Results__c</fullName>
    <label>Any Results</label>
    <summaryForeignKey>breg_Entity_List_Result__c.breg_Entity_List__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>