force-app/main/default/objects/breg_Entity_List__c/fields/breg_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Start_Date__c</fullName>
    <description>Aalta BREG-58</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>