force-app/main/default/objects/breg_Entity_List__c/fields/breg_Status__c.field-meta.xml
<CustomField>
    <fullName>breg_Status__c</fullName>
    <description>Aalta BREG-58</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Not Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>