force-app/main/default/objects/breg_Entity_List__c/fields/breg_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>breg_Zip_Code__c</fullName>
    <description>Aalta BREG-58</description>
    <label>Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>