force-app/main/default/objects/breg_Entity_List__c/validationRules/At_least_one_of_these_fields_need_to_be.validationRule-meta.xml
<ValidationRule>
    <fullName>At_least_one_of_these_fields_need_to_be</fullName>
    <active>true</active>
    <description>At least one of these fields need to be filled out Zip Code, Start Date, Status on the Entity List</description>
    <errorConditionFormula>AND( ISBLANK(breg_Zip_Code__c), ISBLANK(breg_Start_Date__c),ISBLANK(breg_End_Date__c),ISBLANK( TEXT(breg_Status__c)))</errorConditionFormula>
    <errorMessage>At least one of these fields need to be filled out Zip Code, Start Date, Status on the Entity List</errorMessage>
</ValidationRule>