force-app/main/default/objects/breg_Entity_List__c/validationRules/If_Start_Date_is_not_blank_then_End_Dat.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Start_Date_is_not_blank_then_End_Dat</fullName>
    <active>true</active>
    <description>If Start Date is not blank, then End Date cannot be blank</description>
    <errorConditionFormula>AND(NOT(ISBLANK(breg_Start_Date__c)),ISBLANK(breg_End_Date__c))</errorConditionFormula>
    <errorDisplayField>breg_End_Date__c</errorDisplayField>
    <errorMessage>If Start Date is not blank, then End Date cannot be blank</errorMessage>
</ValidationRule>